src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>LG_LeadProcess</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Confirmed</fullName>
        </values>
        <values>
            <fullName>Contacted - Decision maker not available</fullName>
        </values>
        <values>
            <fullName>Contacted - Follow up</fullName>
        </values>
        <values>
            <fullName>Contacted - Future interest</fullName>
        </values>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
	<fields>
        <fullName>LeadAssignmentErrorMsg__c</fullName>
        <description>Update the filed with error msg when the lead data didn&apos;t match with the data in Lead Assignment Table</description>
        <inlineHelpText>Unable to find the data(Product Family or Postal code) in Lead Assignment Table</inlineHelpText>
        <label>LeadAssignmentErrorMsg</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Analog_Availability_FF__c</fullName>
        <formula>If( ISPICKVAL(Analog_Availability__c, &apos;Available&apos;), 
IMAGE(&apos;/resource/Flags/Flags/Green_Flag.png&apos;,&apos;&apos;), 
If( ISPICKVAL(Analog_Availability__c, &apos;Unavailable&apos;), 
IMAGE(&apos;/resource/Flags/Flags/Red_Flag.png&apos;,&apos;&apos;), 
IMAGE(&apos;/resource/Flags/Flags/Gray_Flag.png&apos;,&apos;&apos;) 
) 
)</formula>
        <inlineHelpText>Green Flag - Service Available; Red Flag - Service Unavailable; Gray Flag - Service Availability check is not performed yet.</inlineHelpText>
        <label>Analog Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analog_Availability__c</fullName>
        <label>Analog Availability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>Not Performed</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <description>This date filed will auto populate when Lead is assign to a user by LG_LeadUpdateTrigger as per the Lead Assignment table. This field will not populate when Lead is assign to a queue.</description>
        <label>Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distance_Fiber__c</fullName>
        <description>Abstand Fibertrasse Übergabepunkt</description>
        <label>Distance Fiber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distance_Hub__c</fullName>
        <description>Abstand zum nächsten Hub</description>
        <label>Distance Hub</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dulpicate_Set__c</fullName>
        <label>Dulpicate Set</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FreeText__c</fullName>
        <description>Information within this field should be kept for opportunity level after conversion</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Sales_Id__c</fullName>
        <label>Internal Sales Id</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internet_Availability_FF__c</fullName>
        <formula>If( ISPICKVAL(Internet_Availability__c, &apos;Available&apos;), 
IMAGE(&apos;/resource/Flags/Flags/Green_Flag.png&apos;,&apos;&apos;), 
If( ISPICKVAL(Internet_Availability__c, &apos;Unavailable&apos;), 
IMAGE(&apos;/resource/Flags/Flags/Red_Flag.png&apos;,&apos;&apos;), 
IMAGE(&apos;/resource/Flags/Flags/Gray_Flag.png&apos;,&apos;&apos;) 
) 
)</formula>
        <inlineHelpText>Green Flag - Service Available; Red Flag - Service Unavailable; Gray Flag - Service Availability check is not performed yet.</inlineHelpText>
        <label>Internet Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internet_Availability__c</fullName>
        <label>Internet Availability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>Not Performed</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internet_Marketable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internet Vermarktbar</description>
        <label>Internet Marketable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Availability_Performed_FF__c</fullName>
        <formula>If( ISPICKVAL(Is_Availability_Performed__c, &apos;No&apos;), 
IMAGE(&apos;/resource/Flags/Flags/Gray_Flag.png&apos;,&apos;&apos;),
IMAGE(&apos;/resource/Flags/Flags/Green_Flag.png&apos;,&apos;&apos;) 
)</formula>
        <inlineHelpText>Green Flag - Service Available; Gray Flag - Service Availability check is not performed yet. Please click on “Availability Checker” button to perform the availability check.</inlineHelpText>
        <label>Is Availability Performed?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Availability_Performed__c</fullName>
        <description>To check the product&apos;s availability on a given postal code</description>
        <inlineHelpText>Please click on Perform “Availability Checker” button to perform the availability check.</inlineHelpText>
        <label>Is Availability Performed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Withdrawn__c</fullName>
	<defaultValue>false</defaultValue>
	<description>This checkbox will be checked when lead has been withdrawn</description>
	<label>Withdrawn</label>
	<type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AddressSearchText__c</fullName>
        <label>Address Search Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AddressValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_BankAccountHolder__c</fullName>
        <description>Name registered to the Bank Account number</description>
        <label>Bank Account Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BankAccountNumberIBAN__c</fullName>
        <label>Bank Account Number (IBAN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingCity__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingEmailAddress__c</fullName>
        <label>Billing Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LG_BillingHouseNumberExtension__c</fullName>
        <label>Billing House Number Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingHouseNumber__c</fullName>
        <label>Billing House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingPostalCode__c</fullName>
        <label>Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingStreet__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_ChamberOfCommerceNumber__c</fullName>
        <description>KvK No.</description>
        <label>National ID number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ChamberofCommerceInformation__c</fullName>
        <formula>HYPERLINK(&quot;http://www.kvk.nl/orderstraat/bedrijf-kiezen/?q=&quot; &amp; LG_ChamberOfCommerceNumber__c , &quot;Chamber of Commerce Information&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chamber of Commerce Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CheckServiceAvailability__c</fullName>
        <formula>HYPERLINK(&quot;/partner/apex/LG_ServiceAvailabilitySF1?postalCode=&quot; + LG_VisitPostalCode__c + &quot;&amp;houseNumber=&quot; + LG_VisitHouseNumber__c + &quot;&amp;houseNumberExtension=&quot; + LG_VisitHouseNumberExtension__c,IMAGE (&quot;/partner/servlet/servlet.FileDownload?file=&quot; + $Setup.LG_EnvironmentVariables__c.LG_ServiceAvailabilityIconID__c, &quot;Check Now&quot;))</formula>
        <label>Check Service-Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CommerciallyActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercially Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_CompetitorContractEndDate__c</fullName>
        <label>Competitor Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_CompetitorName__c</fullName>
        <label>Competitor Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1&amp;1</fullName>
                </value>
                <value>
                    <fullName>Telekom</fullName>
                </value>
                <value>
                    <fullName>Vodafone</fullName>
                </value>
                <value>
                    <fullName>O2</fullName>
                </value>
                <value>
                    <fullName>Tele2</fullName>
                </value>
                <value>
                    <fullName>Kabel Deutschland</fullName>
                </value>
                <value>
                    <fullName>Tele Columbus</fullName>
                </value>
                <value>
                    <fullName>EWE Tel</fullName>
                </value>
                <value>
                    <fullName>Net Cologne</fullName>
                </value>
                <value>
                    <fullName>M-net</fullName>
                </value>
                <value>
                    <fullName>swb</fullName>
                </value>
                <value>
                    <fullName>Versatel</fullName>
                </value>
                <value>
                    <fullName>Andere</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_CompetitorProduct__c</fullName>
        <label>Competitor Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Internet+TV</fullName>
                </value>
                <value>
                    <fullName>Telephony</fullName>
                </value>
                <value>
                    <fullName>Telephony+Internet</fullName>
                </value>
                <value>
                    <fullName>Telephony+Internet+TV</fullName>
                </value>
                <value>
                    <fullName>Telephony+TV</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_ContractualOrganization__c</fullName>
        <label>Contractual Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LG_ContractualOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_CreditRisk__c</fullName>
        <label>Credit Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_DateOfEstablishment__c</fullName>
        <label>Date of Establishment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_DecisionMaker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if the Contact is Decision Maker in the Company</description>
        <label>Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_DeliveryMethod__c</fullName>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Post</fullName>
                    <default>true</default>
                    <label>Post</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_DetailedDescription__c</fullName>
        <label>Detailed Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_DetailedIndustry__c</fullName>
        <label>Detailed Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_EconomicallyActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Economically Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_ExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LG_Footprint__c</fullName>
        <label>Footprint</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UPC</fullName>
                </value>
                <value>
                    <fullName>Ziggo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_InteractionStatus__c</fullName>
        <description>Sales2 InteractionStatus</description>
        <label>Interaction Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_InteractionSubStatus__c</fullName>
        <description>Sales2 InteractionSubStatus</description>
        <label>Interaction Sub Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Interest__c</fullName>
        <label>Interest in...</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product but Stuck in existing contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Last_Lead_Status_Change_Date__c</fullName>
        <description>maintains the last changed status date for the leads</description>
        <label>Last Lead Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_LegalEntityType__c</fullName>
        <label>Legal Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LG_LegalEntityType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_LegalForm__c</fullName>
        <label>Legal Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MatchingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field on Lead to Account</description>
        <inlineHelpText>When a matching account is found please convert lead to an existing account without the creation of an opportunity</inlineHelpText>
        <label>Matching Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_MatchingLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup on Lead to a matching lead with lead source &quot;Purchased List&quot; based on the Chamber of Commerce number.</description>
        <inlineHelpText>When a Matching lead is found please take ownership of the matching lead and merge both leads via the &quot;Find Duplicates&quot; button.</inlineHelpText>
        <label>Matching Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Lead.LG_ExternalID__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Matching Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_MatchingRecord__c</fullName>
        <formula>IF(NOT(ISBLANK(LG_MatchingAccount__c )),
IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Possible duplicate&quot;)&amp; &quot; Current lead: &quot; &amp; Company &amp; &quot; - Possible match with account&quot; ,
IF(NOT(ISBLANK( LG_MatchingLead__c )),
IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Possible duplicate&quot;)&amp; &quot; Lead: &quot; &amp; Company &amp; &quot; - Possible match with lead&quot; ,&quot;&quot;
) 
)</formula>
        <label>Matching Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MobileCompetitorContractEndDate__c</fullName>
        <label>Mobile Competitor Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_MobileCompetitorName__c</fullName>
        <label>Mobile Competitor Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Telekom</fullName>
                </value>
                <value>
                    <fullName>Vodafone</fullName>
                </value>
                <value>
                    <fullName>O2</fullName>
                </value>
                <value>
                    <fullName>E-Plus</fullName>
                </value>
                <value>
                    <fullName>Mobilcom Debitel</fullName>
                </value>
                <value>
                    <fullName>1&amp;1</fullName>
                </value>
                <value>
                    <fullName>Andere</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_MobileOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_NewSalesChannel__c</fullName>
        <formula>TEXT(Owner:User.LG_SalesChannel__c)</formula>
        <label>Sales Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_NumberOfDesktops__c</fullName>
        <label>Number of Desktops</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_NumberOfLaptops__c</fullName>
        <label>Number of Laptops</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_OpenCSA__c</fullName>
        <formula>HYPERLINK(&quot;cloudsenseanywhere://entity/viewDetails?id=&quot; + Id, IMAGE (&quot;https://c.cs89.content.force.com/servlet/servlet.ImageServer?id=0150E000000ARYt&amp;oid=00D0E0000008lsj&amp;lastMod=00558000002bIlC&quot; ,&quot;Open CSA&quot;), &quot;__self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open in CSA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_OpenCloudSenseAnywhere__c</fullName>
        <description>Opens the same Lead record in the CloudSense Anywhere app.</description>
        <formula>HYPERLINK(&apos;/partners/apex/LG_OpenCloudsense?id=&apos;+Id, IMAGE (&quot;https://c.cs89.content.force.com/servlet/servlet.ImageServer?id=0150E000000ARYt&amp;oid=00D0E0000008lsj&amp;lastMod=00558000002bIlC&quot; ,&quot;Open CSA&quot;), &quot;__self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open CloudSense Anywhere</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PaymentType__c</fullName>
        <description>Picklist for payment type</description>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Debit</fullName>
                </value>
                <value>
                    <fullName>Self-payer</fullName>
                    <default>true</default>
                    <label>Self-payer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_PhoneOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_PostOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_PostalCity__c</fullName>
        <label>Postal City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PostalCountry__c</fullName>
        <label>Postal Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_PostalHouseNumberExtension__c</fullName>
        <label>Postal House Number Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PostalHouseNumber__c</fullName>
        <label>Postal House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PostalPostalCode__c</fullName>
        <label>Postal Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PostalStreet__c</fullName>
        <label>Postal Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PreferredCommunication__c</fullName>
        <label>Preferred Communication</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Face to Face</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Sms</fullName>
                </value>
                <value>
                    <fullName>Opt out all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_PreferredContactDate__c</fullName>
        <label>Preferred Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_PreferredContactTime__c</fullName>
        <label>Preferred Contact Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PrimaryLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Product__c</fullName>
        <description>Field to capture selected product from web form</description>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ReadyForService__c</fullName>
        <label>Ready for Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Near-Net</fullName>
                </value>
                <value>
                    <fullName>Off-Net</fullName>
                </value>
                <value>
                    <fullName>On-Net</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_ReasonDisqualified__c</fullName>
        <label>Reason Disqualified</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Inaccurate email</fullName>
                </value>
                <value>
                    <fullName>Inaccurate phone #</fullName>
                </value>
                <value>
                    <fullName>Moving Out of Footprint</fullName>
                </value>
                <value>
                    <fullName>Off-Net</fullName>
                </value>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
                <value>
                    <fullName>Product doesn&apos;t match needs of customer</fullName>
                </value>
                <value>
                    <fullName>Loyal to current vendor</fullName>
                </value>
                <value>
                    <fullName>Price is not attractive enough</fullName>
                </value>
                <value>
                    <fullName>Not satisfied with quality</fullName>
                </value>
                <value>
                    <fullName>Does not appreciate direct sales</fullName>
                </value>
                <value>
                    <fullName>Decision made at primary office</fullName>
                </value>
                <value>
                    <fullName>Fiber shortage</fullName>
                </value>
                <value>
                    <fullName>Project implementation too high</fullName>
                </value>
                <value>
                    <fullName>Lost to (local) competition</fullName>
                </value>
                <value>
                    <fullName>Feasibility (time)</fullName>
                </value>
                <value>
                    <fullName>Opex/Capex too high</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
		<value>
                <fullName>No sales-related query</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_ReasonForRegistration__c</fullName>
        <label>Reason for Registration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Role__c</fullName>
        <label>Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business User</fullName>
                </value>
                <value>
                    <fullName>Financial Contact</fullName>
                </value>
                <value>
                    <fullName>Technical Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_SalesforceNotDataMaster__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce not Data Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SOHO</fullName>
                </value>
                <value>
                    <fullName>SME</fullName>
                </value>
                <value>
                    <fullName>LE</fullName>
                </value>
                <value>
                    <fullName>Wholesale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_SpecificInterest__c</fullName>
        <label>Specific Interest</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_VATNumber__c</fullName>
        <description>VAT Number</description>
        <label>VAT Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VIPReason__c</fullName>
        <label>VIP Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LG_VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>